# PG_005

./: .gitignore  BATCH_PROCESSING_GUIDE.md  CLAUDE.md  CODE_STRUCTURE_ANALYSIS.md  DEPENDENCY_DIAGRAM.txt  HOW_TO_RUN.txt  INSTALL_CUDA_GUIDE.md  PROJECT_SUMMARY.md  PYTHON_INSTALL_GUIDE.md  QUICK_START.txt  QUICK_START_CLUSTER.md  RUN_BATCH.md  SETUP_CLUSTER.md  SLURM_GUIDE.md  SPATIAL_INTEGRATION_GUIDE.md  batch_process.py  calculate_zscore_snr.py  check_protocol.py  cluster_analysis.py  compare_spatial_kmeans.py  config.py  config_paths.py  copy_results_to_bucket.sh  data_flow.md  demo_als_biexp.py  demo_biexp_detrend.py  gaussian_imageJ.py  hello.py  im_dynamics.py  im_preprocess.py  im_process_demo_new_v2.py  im_process_main.py  im_process_v2.py  img_proc.py  intensity_categorization_examples.py  kmeans_demo.py  kmeans_demo_1d.py  kmeans_demo_2d.py  main.py  precompile_jit.py  (+18 more)
.claude/: settings.local.json
archive/: cpu_binning.py  im_preprocess.py  kmeans.py  run_als_baseline.py  run_biexp_detrend.py
classes/: __init__.py  abf_clip.py  archived_methods.py  dialog_confirm.py  dialog_get_path.py  dialog_pick_list.py  helper_cell_dropdown.py  helper_checkable_dropdown.py  model_from_dataframe.py  plot_results.py  region_analyzer.py  results_exporter.py  spatial_categorization.py
controllers/: __init__.py  ctrl_check_list.py  ctrl_data_selector.py  ctrl_dor_query.py  ctrl_img_preproc.py  ctrl_img_proc.py
data/: abf_note.db  exp_info.db  pick_list.json  pick_list.xlsx  proc_brief_20260512_000.txt  proc_brief_20260512_001.txt  proc_brief_20260512_002.txt  proc_brief_20260512_002_checked.txt  processing_brief_2026-May-12_002_checked.txt  rec_data.db
doc/: BATCH_PROCESS_STRUCTURE.md  DATABASE_STRUCTURE.md  DEPENDENCY_DIAGRAM.md  PI_MEETING_PREP.md  PROJECT_SUMMARY.md
docs/: BATCH_PROCESS_STRUCTURE.md  DATABASE_STRUCTURE.md  DEPENDENCY_DIAGRAM.md  PROJECT_SUMMARY.md  continue_from_here.md
functions/: CPU_detrend.py  CPU_gauss.py  CPU_process.py  GPU_detrend.py  GPU_gauss.py  GPU_process.py  __init__.py  als_baseline.py  check_cuda.py  cpu_detrend.py  cpu_gauss.py  cpu_parallel_detrend.py  cpu_processing.py  cuda_kernel_detrend.py  detrend.py  gaussian_blur.py  gaussian_filter.py  get_memory_use.py  gpu_detrend.py  gpu_process.py  gpu_processing.py  ij_gaussian.py  imaging_segments_zscore_normalization.py  kmeans.py  spatial_categorization.py  spatial_processing.py  spike_centered_processes.py  spike_triggered_average.py  tau_estimate.py  test_cuda.py  xlsx_reader.py  zscore_norm.py
logs/: Data_2022_07_20.md  Data_2022_07_27.md  Data_2022_08_05.md  Data_2022_10_04.md  Data_2023_06_13.md  Data_2023_07_22.md  Data_2023_09_22.md  Data_2023_09_26.md  Data_2023_09_28.md  Data_2023_09_29.md  Data_2023_10_03.md  Data_2023_10_05.md  Data_2023_10_12.md  Data_2023_10_15.md  Data_2024_02_01.md  Data_2024_02_15.md  Data_2024_02_23.md  Data_2024_03_07.md  Data_2024_03_22.md  Data_2024_05_11.md  Data_2024_05_15.md  Data_2024_05_27.md  Data_2024_05_30.md  Data_2024_07_08.md  Data_2024_07_11.md  Data_2024_07_12.md  Data_2024_08_13.md  Data_2024_08_15.md  Data_2024_08_23.md  Data_2024_10_03.md  Data_2024_10_11.md  Data_2024_12_19.md  Data_2025_01_01.md  Data_2025_02_05.md  Data_2025_02_27.md  Data_2025_03_21.md  Data_2025_04_03.md  Data_2025_04_18.md  Data_2025_05_12.md  Data_2025_05_16.md  (+26 more)
proc_tiffs/: pixel1.xlsx  pixel1_ALS.xlsx
utils/: __init__.py  params.py  xlsx_reader.py
views/: __init__.py  view_check_list.py  view_data_selector.py  view_dor_query.py  view_img_preproc.py  (+2 more)
(+19 files in other folders)
