[project]
name = "pg-005"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "imageio>=2.37.2",
    "matplotlib>=3.10.8",
    "numba>=0.60.0",
    "numba-cuda>=0.23.0",
    "numpy>=1.26.4",
    "nvidia-ml-py>=13.590.44",
    "openpyxl>=3.1.5",
    "pathlib>=1.0.1",
    "psutil>=7.2.1",
    "pyabf>=2.3.8",
    "pyside6==6.8",
    "rich>=14.2.0",
    "scikit-image>=0.26.0",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.0",
    "tabulate>=0.9.0",
    "tifffile>=2025.12.20",
    "tqdm>=4.67.1",
    "polars>=1.39.3",
    "xlsxwriter>=3.2.9",
    "pandas>=2.3.3",
]

[tool.ruff]
line-length = 120
fix=true
lint.unfixable = ["F401"]

lint.extend-select = [
    # ── Core recommended ──────────────────────────────────────────
    "E",    # Pycodestyle errors
    "W",    # Pycodestyle warnings
    "I",    # isort – import ordering
    "UP",   # Pyupgrade – modernize syntax
    "C4",   # Flake8-comprehensions – best practices in comprehensions
    "ISC",  # Flake8-implicit-str-concat – implicit string concatenation
    "ICN",  # Flake8-import-conventions – conventional import aliases
    "RET",  # Flake8-return – return statement issues
    "SIM",  # Flake8-simplify – simplification hints
    "TID",  # Flake8-tidy-imports – import style
    "TC",   # Flake8-type-checking – TYPE_CHECKING block usage
    "PTH",  # Flake8-use-pathlib – prefer pathlib over os.path
    "NPY",  # NumPy-specific rules

    # ── Extra ─────────────────────────────────────────────────────
    "A",    # Flake8-builtins – misuse of Python built-in names
    "AIR",  # Airflow-specific rules
    "ARG",  # Flake8-unused-arguments
    "ASYNC",# Flake8-async – async/await usage
    "B",    # Flake8-bugbear – common bug patterns
    "C90",  # McCabe – function complexity
    "DJ",   # Flake8-django – Django-specific conventions
    "DTZ",  # Flake8-datetimez – timezone-aware datetime
    "EM",   # Flake8-errmsg – error message style
    "EXE",  # Flake8-executable – executable file checks
    "FAST", # FastAPI-specific rules
    "FIX",  # Flake8-fixme – FIXME comments
    "FLY",  # Flynt – f-string conversion
    "FURB", # Refurb – code refurbishment
    "G",    # Flake8-logging-format – logging format strings
    "INP",  # Flake8-no-pep420 – implicit namespace packages
    "INT",  # Flake8-gettext – internationalization
    "LOG",  # Flake8-logging – proper logging usage
    "PD",   # Pandas-vet – pandas code practices
    "PGH",  # Pygrep-hooks – custom grep hooks
    "PIE",  # Flake8-pie – improvement suggestions
    "PT",   # Flake8-pytest-style – pytest best practices
    "PYI",  # Flake8-pyi – type stub consistency
    "Q",    # Flake8-quotes – quote style
    "RSE",  # Flake8-raise – raise statement usage
    "SLF",  # Flake8-self – unused self
    "SLOT", # Flake8-slots – suggest __slots__
    "T10",  # Flake8-debugger – debugger statements
    "TD",   # Flake8-todos – TODO comments
    "TRY",  # Tryceratops – try/except suggestions
    "YTT",  # Flake8-2020 – Python 2020 best practices
]

lint.ignore = [
    "E501",   # Pycodestyle - line too long
    "N816",   # Pylint - mixedCase global variable names
    "RET504", # Flake8-return - assignment immediately before return
    "SIM108", # Flake8-simplify - if-else replaceable with ternary
]

[tool.ruff.format]
line-ending = "auto"
indent-style = "space"
skip-magic-trailing-comma = true
